# heos-tui

./: Cargo.toml  readme.md
src/: app.rs  config.rs  event.rs  main.rs
src/heos/: avr.rs  client.rs  discovery.rs  mod.rs  protocol.rs  types.rs
src/ui/: browse.rs  devices.rs  help.rs  inputs.rs  main_view.rs  mod.rs  queue.rs  sound_settings.rs  surround.rs
