[package]
name = "heos-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal user interface for controlling HEOS AVR devices"
authors = ["Your Name"]

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
toml = "0.8"
dirs = "5"
clap = { version = "4", features = ["derive"] }
